# cmaketools

./: .hgignore  CMakeLists.txt  CMakeTools.sln  CMakeTools.vsmdi  License.txt  Local.testsettings  TraceAndTestImpact.testsettings
CMakeTools/: CMakeAuthoringScope.cs  CMakeCmdIds.cs  CMakeDeclarationsFactory.cs  CMakeEditorFactory.cs  CMakeError.cs  CMakeExpansionProvider.cs  CMakeFunctionDeclarations.cs  CMakeGeneratorDeclarations.cs  CMakeGuids.cs  CMakeIncludeDeclarations.cs  CMakeItemDeclarations.cs  CMakeKeywords.cs  CMakeLanguageDeclarations.cs  CMakeLanguageService.cs  CMakeLists.txt  CMakeMethods.cs  CMakeOptionPage.cs  CMakePackage.cs  CMakePackageDeclarations.cs  CMakeParsing.cs  CMakePath.cs  CMakeProperties.cs  CMakeResources.resx  CMakeScanner.cs  CMakeSource.cs  CMakeSourceDeclarations.cs  CMakeStrings.Designer.cs  CMakeStrings.resx  CMakeSubcommandDeclarations.cs  CMakeSubcommandMethods.cs  CMakeSubdirectoryDeclarations.cs  CMakeTargetDeclarations.cs  CMakeTools.csproj  CMakeTools.csproj.in  CMakeTools.vsct  CMakeUserMethods.cs  CMakeVariableDeclarations.cs  CMakeViewFilter.cs  EnumToDisplayNameConverter.cs  Key.snk  (+9 more)
CMakeTools/Properties/: AssemblyInfo.cs
CMakeTools/Snippets/1033/: SnippetsIndex.xml
CMakeTools/Snippets/1033/Snippets/: AddCustomCommand.snippet  ForEach.snippet  Function.snippet  If.snippet  IfElse.snippet  Macro.snippet  While.snippet
CMakeTools/Templates/NewItems/: NewCMakeItems.vsdir
CMakeToolsSetup/: CMakeLists.txt  CMakeSnippets.wxi  CMakeSnippetsIndex.wxi  CMakeTemplates.wxi  CMakeTools.wxi  CMakeToolsSetup.wixproj  Components.wxi  Product.wxs  Readme.html
CMakeToolsTest/: CMakeKeywordsTest.cs  CMakeLists.txt  CMakeMethodsTest.cs  CMakeParsingTest.cs  CMakeScannerTest.cs  CMakeToolsTest.csproj  CMakeToolsTest.csproj.in
CMakeToolsTest/Properties/: AssemblyInfo.cs
